fix: z-index issue

--- a/app/assets/stylesheets/base/search.scss
+++ b/app/assets/stylesheets/base/search.scss
@@ -652,7 +652,7 @@
   .field {
     margin-bottom: 10px;
     .wrapper-dropdown {
-      font-size: 12px;
+    
       .ddLabel {
         display: inline-block;
         overflow: hidden;
